Fix header logo alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -147,6 +147,10 @@ button {
   width: 30px;
 }
 
+.logo {
+  display: flex;
+}
+
 .logo-title{
   color: var(--text_normal);
   font-size: 28px;
